# lidhra

./: .gitignore  DISTRIBUTION.md  LICENSE  README.md  index.html
.github/workflows/: ci.yml  ios-appstore.yml  release.yml
app/: README.md
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  main.rs
crates/: Cargo.toml
crates/lidhra-cli/: Cargo.toml
crates/lidhra-cli/src/: main.rs
crates/lidhra-debrid/: Cargo.toml  README.md
crates/lidhra-debrid/examples/: resolve_magnet.rs
crates/lidhra-debrid/src/: error.rs  lib.rs  model.rs  policy.rs  provider.rs  registry.rs
crates/lidhra-debrid/src/providers/: alldebrid.rs  mod.rs  premiumize.rs  real_debrid.rs  torbox.rs
crates/lidhra-license/: Cargo.toml
crates/lidhra-license/src/: lib.rs
crates/lidhra-server/: Cargo.toml
crates/lidhra-server/src/: main.rs
crates/lidhra-transfer/: Cargo.toml
crates/lidhra-transfer/examples/: fetch.rs
crates/lidhra-transfer/src/: lib.rs
design/: README.md  index.html
design/App-Mockups/: README.md  build_svgs.py
design/Brand/platform-icons/: platform-icon-spec.json
design/Concept/: Lidhra-Concept.html
design/Design-System/docs/: BRAND-GUIDELINES.md
design/Design-System/tokens/: lidhra.css  lidhra.tokens.json
design/Developer/: LidhraColors.kt  LidhraColors.swift  debrid_provider.rs  lidhra-colors.rs
design/marketing/: README.md  build_marketing.py
docs/: APPSTORE.md  CNAME  index.html  privacy.html
scripts/: upload-appstore-ios.sh
ui/: index.html
worker/: README.md  deploy.sh  package-lock.json  package.json  wrangler.toml
worker/src/: index.js
