[package]
name = "lidhra-debrid"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Unified interface over debrid / multi-hoster providers (Real-Debrid, AllDebrid, TorBox, …) for Lidhra."
repository = "https://github.com/peterdsp/lidhra"
keywords = ["debrid", "download", "real-debrid", "torrent", "http"]
categories = ["api-bindings", "network-programming"]

[dependencies]
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[features]
default = []
