[package]
name = "lidhra-transfer"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Segmented, resumable HTTPS download engine for Lidhra — turns a direct link into a file."

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1", features = ["fs", "io-util", "rt", "sync", "time", "macros"] }
thiserror = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
